# embeddings

./: evaluate.py  local_metrics.csv  nanobeir.csv  plot_embeddings.py  plot_metrics.py  pyproject.toml  train.py  train_examples.json  viz-qt-improved.py  viz-qt.py
